--- a/src/main/webapp/CSS/main.css
+++ b/src/main/webapp/CSS/main.css
@@ -5,71 +5,99 @@
 	text-decoration: none;
 }
 
-.header {
-	width: 100%;
-	height: 60px;
-	background-color: #c0c0c0;
+nav {
+	background-color: #eeeeee;
+	padding: 0px 30px 0px 20px;
+	border: 2px solid #000;
+	border-left: none;
+	border-right: none;
 }
 
-.inner_header {
-	width: 100%;
-	height: 80%;
+nav ul {
+	display: flex;
+	list-style: none;
+	flex-wrap: wrap;
+	align-items: center;
+	justify-content: center;
+}
+
+nav ul li.logo {
+	flex: 1;
+}
+
+.logo h1 {
+	color: #d44400;
+	height: 100%;
 	display: block;
-	margin: 0 auto;
-	padding: 20px;
-	background-color: #004040;
-}
-
-.search {
-	height: 100%;
-	display: table;
-	display: table-cell;
-	float: right;
-	color: #d44400;
-	font-family: sans-serif;
-	padding: 0px 10px;
-	font-size: 20px;
-	font-weight: 600;
-	background-color: #808040;
-}
-
-.logo_container {
-	height: 100%;
-	display: table;
-	float: left;
-	background-color: #539d22;
-}
-
-.logo_container h1 {
-	color: #d44400;
-	height: 100%;
-	display: table-cell;
-	vertical-align: middle;
 	font-family: 'Montserrat';
 	font-size: 36px;
 	font-weight: 200;
 }
 
-.logo_container h1 span {
+.logo h1 span {
 	font-weight: 800;
 }
 
-.navigation a {
-	height: 100%;
-	float: right;
-	display: table;
-	padding: 0px 10px;
+nav ul div.search {
+	padding: 0px 20px;
+	display: inline-flex;
+	font-size: 36px;
+	font-weight: 200;
 }
 
-.navigation li a {
-	display: table-cell;
-	vertical-align: middle;
+nav ul div.navigation {
+	padding: 0px 90px;
+	display: inline-flex;
+	font-size: 36px;
+	font-weight: 200;
+}
+
+nav ul div.navigation a {
+	text-decoration: none;
+	font-size: 18px;
+	padding: 0px 12px;
+}
+
+nav ul div.navigation a:hover {
+	color: red;
+}
+
+nav ul div.search {
+	height: 40px;
+	width: 240px;
+	display: flex;
+	background: white;
+	border-radius: 5px;
+}
+
+nav ul div.search input {
 	height: 100%;
-	color: #d44400;
-	font-family: sans-serif;
-	padding: 0px 20px;
-	font-size: 20px;
-	font-weight: 600;
+	width: 100px;
+	border: none;
+	outline: none;
+	padding: 0 10px;
+	color: #000;
+	font-size: 16px;
+	border-radius: 5px 0 0 5px;
+}
+
+nav ul .search .icon {
+	height: 100%;
+	width: 40px;
+	line-height: 40px;
+	text-align: center;
+	border: 1px solid #cccccc;
+	border-radius: 5px 0 0 5px;
+	cursor: pointer;
+}
+
+nav ul .search .icon:hover {
+	background: #e6e6e6;
+}
+
+nav ul .search .icon span {
+	color: #222222;
+	font-size: 18px;
 }
 
 body {
@@ -86,6 +114,13 @@ body {
 	margin-top: 50px;
 	font-family: sans-serif;
 	margin: 0;
+}
+
+.local-buttons {
+	padding: 0px 20px;
+	display: inline-flex;
+	font-size: 18px;
+	font-weight: 200;
 }
 
 section {
@@ -120,13 +155,14 @@ section a {
 .footer {
 	width: 100%;
 	height: 40px;
-	display: block;
+	display: flex;
 	background-color: #eeeeee;
-	color: #d44400;
-	vertical-align: middle;
 	position: absolute;
-	text-align: right;
 	bottom: 0;
-	padding: 30px;
-	font-size: 1.3em;
+}
+
+div.footer {
+	color: #d44400;
+	text-align: right;
+	font-size: 1.1em;
 }
