--- a/src/main/webapp/CSS/main.css
+++ b/src/main/webapp/CSS/main.css
@@ -3,11 +3,13 @@
 	padding: 0;
 	list-style: none;
 	text-decoration: none;
+	font-family: 'Montserrat', sans-serif;
 }
 
 nav {
 	background-color: #eeeeee;
-	padding: 0px 30px 0px 20px;
+	display: flex;
+	padding: 10px 20px 10px 20px;
 	border: 2px solid #000;
 	border-left: none;
 	border-right: none;
@@ -23,65 +25,53 @@ nav ul {
 
 nav ul li.logo {
 	flex: 1;
+	font-size: 30px;
+	font-weight: 700;
 }
 
-.logo h1 {
+.logo span {
 	color: #d44400;
-	height: 100%;
-	display: block;
-	font-family: 'Montserrat';
-	font-size: 36px;
-	font-weight: 200;
+	font-weight: 700;
 }
 
-.logo h1 span {
-	font-weight: 800;
-}
-
-nav ul div.search {
-	padding: 0px 20px;
+nav ul div.items {
+	padding: 0px 5px;
 	display: inline-flex;
-	font-size: 36px;
 	font-weight: 200;
 }
 
-nav ul div.navigation {
-	padding: 0px 90px;
-	display: inline-flex;
-	font-size: 36px;
-	font-weight: 200;
-}
-
-nav ul div.navigation a {
+nav ul div.items a {
 	text-decoration: none;
-	font-size: 18px;
+	color: #2355f8;
+	font-size: 24px;
+	font-weight: 600;
 	padding: 0px 12px;
 }
 
-nav ul div.navigation a:hover {
-	color: red;
+nav ul div.items a:hover {
+	color: #d44400;
 }
 
-nav ul div.search {
+nav ul .search-icon {
 	height: 40px;
 	width: 240px;
 	display: flex;
-	background: white;
+	background: #d44400;
 	border-radius: 5px;
 }
 
-nav ul div.search input {
+nav ul .search-icon input{
 	height: 100%;
-	width: 100px;
+	width: 200px;
 	border: none;
 	outline: none;
-	padding: 0 10px;
+	padding: 0px 10px;
 	color: #000;
 	font-size: 16px;
 	border-radius: 5px 0 0 5px;
 }
 
-nav ul .search .icon {
+nav ul .search-icon .icon {
 	height: 100%;
 	width: 40px;
 	line-height: 40px;
@@ -89,13 +79,13 @@ nav ul .search .icon {
 	border: 1px solid #cccccc;
 	border-radius: 5px 0 0 5px;
 	cursor: pointer;
+} 
+
+nav ul .search-icon .icon:hover {
+	background: #000;
 }
 
-nav ul .search .icon:hover {
-	background: #e6e6e6;
-}
-
-nav ul .search .icon span {
+nav ul .search-icon .icon span {
 	color: #222222;
 	font-size: 18px;
 }
@@ -111,29 +101,24 @@ body {
 body {
 	color: white;
 	margin: 0;
-	margin-top: 50px;
-	font-family: sans-serif;
 	margin: 0;
 }
 
 .local-buttons {
-	padding: 0px 20px;
+	padding: 20px 0px 20px 20px;
 	display: inline-flex;
+}
+
+.local-buttons input {
 	font-size: 18px;
-	font-weight: 200;
 }
 
 section {
-	height: 80vh;
+	height: 83vh;
 	border: 1px solid black;
 	display: block;
 	text-align: left;
-	padding: 50px;
-}
-
-section h1 {
-	font-size: 2.2em;
-	text-align: justify;
+	padding: 0px;
 }
 
 section h2 {
@@ -157,24 +142,39 @@ main {
 }
 
 div.programInput {
-	width: 67%;
+	width: 50%;
+	padding: 20px 0px 0px 30px;
 }
 
 div.listUsers {
-	width: 33%;
+	width: 50%;
+}
+
+.programTable{
+    width: 100%; /* Ширина таблицы */
+	table-layout: auto;
+}
+
+.programTable td{
+	text-align: center;
+	vertical-align: middle;
+}
+.programTable th{
+	text-align: center;
+	vertical-align: middle;
 }
 
 .footer {
-	width: 100%;
-	height: 40px;
-	display: flex;
 	background-color: #eeeeee;
 	position: absolute;
-	bottom: 0;
+	width: 100%;
+	height: 40px;
 }
 
-div.footer {
+div.footer p {
 	color: #d44400;
 	text-align: right;
-	font-size: 1.1em;
+	vertical-align: middle;
+	font-size: 1.2em;
+	padding: 10px 30px 0px 0px;
 }
